--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="green_100">#C8E6C9</color>
+    <!-- res/values/colors.xml -->
+    <color name="green_200">#388E3C</color> <!-- Replace with your desired color -->
+    <color name="blue_100">#2196F3</color> <!-- Replace with your desired color -->
+    <color name="primary">#6200EE</color>
+    <color name="primary_dark">#3700B3</color>
+    <color name="primary_light">#BB86FC</color>
+
 </resources>
