--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,8 @@
     <color name="primary">#6200EE</color>
     <color name="primary_dark">#3700B3</color>
     <color name="primary_light">#BB86FC</color>
+    <color name="progress_green">#4CAF50</color>
+    <color name="progress_light_green">#A5D6A7</color> <!-- Light green -->
+    <color name="progress_dark_green">#2E7D32</color>
 
 </resources>
