--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,31 +1,34 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
     android:fitsSystemWindows="true"
-    android:paddingTop="?attr/actionBarSize"
     android:paddingStart="16dp"
+    android:paddingTop="?attr/actionBarSize"
     android:paddingEnd="16dp">
 
     <!-- ProgressBar for Step Tracking -->
+
+    <!-- Step Count Display Inside Progress Bar -->
     <com.google.android.material.progressindicator.CircularProgressIndicator
         android:id="@+id/stepProgressBar"
         android:layout_width="@dimen/progress_bar_size"
         android:layout_height="@dimen/progress_bar_size"
         android:layout_marginTop="@dimen/margin_top"
         android:max="@integer/step_goal"
-        app:indicatorSize="@dimen/indicator_size"
-        app:trackThickness="@dimen/track_thickness"
         app:indicatorColor="@color/progress_green"
-        app:trackColor="@color/primary_color"
+        app:indicatorSize="@dimen/indicator_size"
         app:layout_constraintBottom_toTopOf="@+id/caloriesBurned"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintVertical_bias="0.215"
+        app:trackColor="@color/primary_color"
+        app:trackThickness="@dimen/track_thickness" />
 
-    <!-- Step Count Display Inside Progress Bar -->
     <TextView
         android:id="@+id/stepCountInsideProgressBar"
         android:layout_width="wrap_content"
@@ -42,32 +45,34 @@
         app:layout_constraintVertical_bias="0.468" />
 
     <!-- Step Count Label -->
+
+    <!-- Step Count Value Display -->
     <TextView
         android:id="@+id/stepCountLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:fontFamily="@font/monsterrat_light"
         android:text="@string/steps_taken"
         android:textColor="@android:color/white"
         android:textSize="@dimen/label_text_size"
-        android:fontFamily="@font/monsterrat_light"
-        app:layout_constraintTop_toBottomOf="@+id/stepProgressBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stepProgressBar" />
 
-    <!-- Step Count Value Display -->
     <TextView
         android:id="@+id/stepCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/monsterrat_light"
         android:padding="@dimen/text_padding"
         android:text="@string/initial_step_count"
         android:textColor="@android:color/white"
         android:textSize="@dimen/step_count_text_size"
         android:textStyle="bold"
-        android:fontFamily="@font/monsterrat_light"
-        app:layout_constraintTop_toBottomOf="@+id/stepCountLabel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/stepCountLabel" />
 
     <!-- Calories Burned Display -->
     <TextView
@@ -104,16 +109,52 @@
         android:id="@+id/debugModeSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/debug_mode"
         android:layout_marginTop="16dp"
+        android:text="@string/debug_mode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.746"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/resetButton" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/setStepGoalButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="@color/primary_color"
+        android:text="Set Step Goal"
+        android:textColor="@android:color/white"
+        app:cornerRadius="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/resetButton"/>
+        app:layout_constraintTop_toBottomOf="@+id/resetButton" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/progressPercentageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="0%"
+        android:textColor="@android:color/white"
+        android:textSize="60sp"
+        app:layout_constraintBottom_toBottomOf="@id/stepProgressBar"
+        app:layout_constraintEnd_toEndOf="@id/stepProgressBar"
+        app:layout_constraintStart_toStartOf="@id/stepProgressBar"
+        app:layout_constraintTop_toTopOf="@id/stepProgressBar"
+        app:layout_constraintVertical_bias="0.484" />
 
-
-
-
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/currentStepGoalView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Current Step Goal: 10000"
+        android:textColor="@android:color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/setStepGoalButton" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
