Working on website

--- a/StepTracker/src/main/res/layout/activity_main.xml
+++ b/StepTracker/src/main/res/layout/activity_main.xml
@@ -161,7 +161,8 @@
         android:layout_height="221dp"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="42dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 
