--- a/BallisticsCalculator/src/main/res/values/themes.xml
+++ b/BallisticsCalculator/src/main/res/values/themes.xml
@@ -1,5 +1,21 @@
-<?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Base application theme -->
+    <style name="Theme.BallisticsCalculator" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorOnPrimary">@color/gold</item>
 
-    <style name="Theme.StepTrackers" parent="android:Theme.Material.Light.NoActionBar" />
+        <item name="colorSecondary">@color/gold</item>
+        <item name="colorSecondaryVariant">@color/gold</item>
+        <item name="colorOnSecondary">@color/black</item>
+
+        <!-- Text color set to white for better contrast -->
+        <item name="android:textColor">@color/white</item>
+
+        <!-- Background color -->
+        <item name="android:background">@color/black</item>
+
+        <!-- EditText hint color for better contrast -->
+        <item name="android:textColorHint">@color/gold</item>
+    </style>
 </resources>
